--- a/UI/stylesheets/style.css
+++ b/UI/stylesheets/style.css
@@ -13,11 +13,13 @@ body {
   opacity: 0.8;
   padding-top: 50px;
   margin-bottom: 20px;
+  
 }
 
 .menuDiv {
   float: right;
-  margin-right: 50px;
+  margin-right: 50px
+  
   /* background-color: lightgrey; */
 }
 
@@ -63,6 +65,39 @@ ul li a:hover {
 
 .outerUL li:hover .innerUL li {
   display: block;
+}
+
+label {
+  margin: 0 40px 0 0;
+  font-size: 26px;
+  line-height: 70px;
+  display: none;
+  width: 26px;
+  float: right;
+}
+
+#toggle {
+  display: none;
+}
+
+@media only screen and (max-width: 500px) {
+  label {
+    display: block;
+    cursor: pointer;
+  }
+  .menuDiv {
+    text-align: center;
+    width: 100%;
+    /* display: none; */
+  }
+  .headerDiv .menuDiv .outerUL .headerLinks {
+    display: block;
+    border-bottom: 1px solid #EAEAEB;
+    margin: 0;
+  }
+  #toggle:checked + .headerDiv {
+    display: block;
+  }
 }
 /*********************** NAV LINKS ENDS *********************/
 
@@ -138,9 +173,11 @@ ul li a:hover {
   /* margin-top: 1rem; */
   margin: 1rem auto 0rem;
   text-align: center;
-
-  background-color: #00bab1;
   color: white;
+  font-style: italic;
+  /* font-weight: bold; */
+  font-size: 1.05rem;
+  background-color: #00bab1;
   padding: .6rem;
   border: none;
   border-radius: .3rem;
@@ -148,7 +185,7 @@ ul li a:hover {
 
 .form_search button:hover {
   cursor: pointer;
-  background: #ffc107;
+  background: #E0AF1A;
   color: #000;
 }
 
@@ -165,44 +202,129 @@ ul li a:hover {
    /*Items section*/
 
 .lower_section {
-  width: 90%;
-  margin-left: auto;
+  /* width: 90%; */
+  /* margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  background-color: #282C34;
+  background-color: #282C34; */
+
+
+  display: grid;
+ /* grid-template-columns: 33.3% 33.3% 33.3%; */
+ grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+ /* grid-template-columns: repeat(3, 1fr); */
+ grid-auto-rows: minmax(200px, auto);
+ /* grid-gap: 20px; */
+ /* grid-row-gap: 30px; */
+ grid-column-gap: 10px;
+ max-width: 960px;
+ margin: 0 auto;
 }
 
 .div_products {
-  color: white;
+  /* color: white;
   float: left;
-  /* width: 32%; */
-  width: 251px;
-  height: 251px;
+  width: 32%;
+  width: 180px;
+  height: 180px;
   margin-top: .3rem;
-  margin-left: 1rem;
+  margin-left: 2rem;
+  text-align: center; */
+  color: silver;
+  text-align: center;
+
+
+
 }
+
+.div_products img{
+  /* width: 180px;
+  height: 180px;
+  border: 2px solid #00bab1; */
+
+  /* height: 100%; */
+  /* width: 100%; */
+  border-radius: 5px;
+  width: 180px;
+  height: 180px;
+}
+
+.div_products h2 {
+  color: #E0AF1A;
+}
+
+.div_products p {
+  text-align: center;
+  /*  */
+  /* border-top: 1px solid #E0AF1A; */
+  border-top: 1px solid #FFFF00;
+  border-bottom: 2px solid #00bab1;
+  /* margin-bottom: 50px; */
+}
+
+
 
 /* .div_products:first-of-type {
   margin-left: 10px;
 } */
 
-#first_product {
-  margin-left: 50px;
-}
+/* #first_product {
+  margin-left: 85px;
+} */
 
-.img_responsive {
-  max-width: 100%;
-}
+
 
 img:hover {
   /* outline: 5px solid red; */
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
+
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
   transition: all, .5s;
 }
 
+.footer{
+  /* height: 100px; */
+  width: 100%;
+  background-color: #E0AF1A;
+  opacity: 0.8;
+  margin-top: 50px;
+
+}
+
+.footer-grid-container {
+  display: grid;
+ /* grid-template-columns: 33.3% 33.3% 33.3%; */
+ grid-template-columns: 1fr 1fr 1fr 1fr;
+ /* grid-template-columns: repeat(3, 1fr); */
+ grid-auto-rows: minmax(200px, auto);
+ /* grid-gap: 20px; */
+ /* grid-row-gap: 30px; */
+ grid-column-gap: 10px;
+ max-width: 960px;
+ margin: 0 auto;
+}
+
+.footer-grid-container, .grid-item {
+  text-align: center;
+}
+/************** MEDIA QUERIES **************/
 @media screen and (max-width: 700px) {
   .div_products {
-    width: 100%;
-    float
+    width: 360px;
+  }
+
+  .div_products img {
+    width: 360px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .div_products {
+    width: 360px;
+  }
+
+  .div_products img {
+    width: 800px;
   }
 }
